refactor: styles of board, bot-bubble, _app.scss

--- a/src/assets/scss/_app.scss
+++ b/src/assets/scss/_app.scss
@@ -4,4 +4,15 @@
 
 @import 'variables';
 
+//board
+@import './action.scss';
+@import './header.scss';
+@import './content.scss';
+@import './message-bubble.scss';
+@import './board/board.scss';
+
+//bot-bubble
+@import './bot-bubble/bot-bubble.scss';
+
 @import './components/bot/bot-ui.scss';
+
