--- a/src/assets/scss/_app.scss
+++ b/src/assets/scss/_app.scss
@@ -5,14 +5,14 @@
 @import 'variables';
 
 //board
-@import './action.scss';
-@import './header.scss';
-@import './content.scss';
-@import './message-bubble.scss';
-@import './board/board.scss';
+@import './components/board/action.scss';
+@import './components/board/header.scss';
+@import './components/board/content.scss';
+@import './components/board/message-bubble.scss';
+@import './components/board/board.scss';
 
 //bot-bubble
-@import './bot-bubble/bot-bubble.scss';
+@import './components/bot-bubble/bot-bubble.scss';
 
 @import './components/bot/bot-ui.scss';
 
