--- a/src/assets/scss/components/board/content.scss
+++ b/src/assets/scss/components/board/content.scss
@@ -1,4 +1,18 @@
 .qkb-board-content {
     height: 80%;
-    overflow-y: auto;
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+        width: 6px;
+        background-color: #F5F5F5;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: #000000;
+    }
+
+    &::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        background-color: #F5F5F5;
+    }
 }
