Change: styles of board component

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,8 +1,6 @@
 //root
 $font-size-root: 16px;
 
-$radius-message-bubble: 1rem;
-
 //bot-bubble
 $color-bot-bubble: blue;
 
@@ -22,4 +20,19 @@ $positon-bottom-board: $positon-bottom-bot-bubble + $height-bot-bubble;
 $positon-right-board: $positon-right-bot-bubble + $width-bot-bubble;
 $positon-left-board: $positon-left-bot-bubble + $width-bot-bubble;
 
-$radius-board: 1em;
+$board-radius: 1em;
+
+$board-header-bg-color: #444A62;
+$board-header-color: white;
+$board-header-btn-bg-color: #444A62;
+$board-header-btn-color: white;
+
+$board-action-input-bg-color: #EDF1F4;
+$board-action-btn-bg-color: #EDF1F4;
+
+//message-bubble
+$message-bubble-text-bg-color: #6B8CFF;
+$message-bubble-text-color: white;
+$message-bubble-btn-bg-color: #29BB5C;
+
+$message-bubble-radius: 0.5rem;
