--- a/src/assets/scss/components/board/action.scss
+++ b/src/assets/scss/components/board/action.scss
@@ -1,24 +1,26 @@
 .qkb-board-action {
     display: flex;
-    height: 10%;
+    height: 60px;
     justify-content: space-between;
     align-items: flex-end;
+    padding: 0.5em;
+    flex: 0 0 auto;
 }
 
 .qkb-board-action__input {
-    // width:  ;
-    border: 1px solid black;
+    border: hidden;
     outline: none;
     border-radius: 1em;
-    height: 2rem;
     flex-grow: 1;
     margin-right: 0.5em;
+    background-color: $board-action-input-bg-color;
+    padding: 0.8em;
 }
 
 .qkb-board-action__btn-send {
-    border: 1px solid black;
-    height: 2rem;
+    border: hidden;
     outline: none;
     border-radius: 1em;
-    padding: 0.3em 1.5em;
+    padding: 0.8em 1.5em;
+    background-color: $board-action-btn-bg-color;
 }
