--- a/src/assets/scss/components/_content.scss
+++ b/src/assets/scss/components/_content.scss
@@ -106,35 +106,17 @@
   padding: .25rem 1rem;
   cursor: pointer;
   outline: 0;
-  border: 0;
+  border: 1px solid transparent;
   border-radius: 13px;
   color: inherit;
   font-size: 0.875rem;
   font-family: inherit;
   text-decoration: none;
   background-color: transparent;
+  transition: background-color linear .15s, color linear .1s;
 
   span {
     position: relative;
     z-index: 10;
-  }
-
-  &::before {
-    display: block;
-    content: '';
-    position: absolute;
-    z-index: 0;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: .8;
-    transition: opacity linear .1s;
-  }
-
-  &:hover {
-    &::before {
-      opacity: 1;
-    }
   }
 }
