Update: Add Events emitted, typing indicators, disable input prop

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -20,9 +20,11 @@ $avatar-size: 32px;
 $bubble-triangle-size: 10px;
 $bubble-time-bg: #222;
 $bubble-time-color: $white;
+$typing-indicator-size: 7px;
 
 // Action
 $action-height: 46px;
 $action-line: #e6e6e6;
 $action-input-bg: $white;
+$action-disable-bg: #ccc;
 $action-icon-color: #666;
