--- a/src/assets/scss/components/_action.scss
+++ b/src/assets/scss/components/_action.scss
@@ -1,9 +1,25 @@
 .qkb-board-action {
+  position: relative;
   display: flex;
   flex: none;
   height: $action-height;
   padding: 0.45rem 1.25rem 0.5rem;
   border-top: 1px solid $action-line;
+}
+
+.qkb-board-action--disabled {
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: .2;
+    cursor: not-allowed;
+  }
 }
 
 .qkb-board-action__wrapper {
@@ -12,18 +28,40 @@
   background-color: $action-input-bg;
 }
 
-.qkb-board-action__input {
+.qkb-board-action__msg-box {
+  position: relative;
   flex-grow: 1;
-  height: 100%;
   padding: 0 1rem 0 0;
+}
+
+.qkb-board-action__input {
+  height: 100%;
+  width: 100%;
+  padding: 0;
   font-size: 0.875rem;
   border: 0;
   background-color: transparent;
   box-shadow: none;
   outline: 0;
+
+  &[disabled="disabled"] {
+    pointer-events: none;
+  }
 }
 
-.qkb-board-action__box {
+.qkb-board-action__disable-text {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: $action-input-bg;
+  font-size: 0.875rem;
+}
+
+.qkb-board-action__extra {
   display: flex;
   flex: none;
   justify-content: center;
