Fix: Bubble button focus outline

--- a/src/assets/scss/components/_bubble-btn.scss
+++ b/src/assets/scss/components/_bubble-btn.scss
@@ -5,7 +5,7 @@
 .qkb-bubble-btn {
   display: block;
   padding: 0;
-  outline: none;
+  outline: 0;
   border: 0;
   box-shadow: none;
   border-radius: 50%;
