--- a/src/assets/scss/components/_action.scss
+++ b/src/assets/scss/components/_action.scss
@@ -72,6 +72,7 @@
   padding: 0;
   outline: 0;
   border: 0;
+  line-height: 1;
   box-shadow: none;
   background-color: transparent;
   cursor: pointer;
